{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 769,
  "lineage": "0d705456-3176-5231-3f4c-6ba09b5de33e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "performance_test_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03862f572400bd66b",
            "association_id": "eipassoc-0dd73a65b872594d1",
            "domain": "vpc",
            "id": "eipalloc-03862f572400bd66b",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-05877f20b885c49db",
            "private_dns": "ip-10-32-2-182.eu-west-2.compute.internal",
            "private_ip": "10.32.2.182",
            "public_dns": "ec2-35-177-43-140.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.43.140",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.performance_test",
            "aws_vpc.performance_test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d1b6d67732395c7",
            "association_id": "eipassoc-050cc69304f948d62",
            "domain": "vpc",
            "id": "eipalloc-06d1b6d67732395c7",
            "network_border_group": "eu-west-2",
            "network_interface": "eni-080e0ad2fac4dc6aa",
            "private_dns": "ip-10-32-3-60.eu-west-2.compute.internal",
            "private_ip": "10.32.3.60",
            "public_dns": "ec2-3-10-229-130.eu-west-2.compute.amazonaws.com",
            "public_ip": "3.10.229.130",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.performance_test",
            "aws_vpc.performance_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "performance_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:950711068211:internet-gateway/igw-0058797183cd26668",
            "id": "igw-0058797183cd26668",
            "owner_id": "950711068211",
            "vpc_id": "vpc-0a23d00cb4415cc75"
          },
          "dependencies": [
            "aws_vpc.performance_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "performance_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:950711068211:loadbalancer/app/performance-test-lb/aab9c95a0aa46e00",
            "arn_suffix": "app/performance-test-lb/aab9c95a0aa46e00",
            "desync_mitigation_mode": "defensive",
            "dns_name": "performance-test-lb-466325430.eu-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-2:950711068211:loadbalancer/app/performance-test-lb/aab9c95a0aa46e00",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "performance-test-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d3a4a0eeef42fe47"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-040238240f9a5c0e1"
              },
              {
                "subnet_id": "subnet-0b7f9fda955fec917"
              }
            ],
            "subnets": [
              "subnet-040238240f9a5c0e1",
              "subnet-0b7f9fda955fec917"
            ],
            "vpc_id": "vpc-0a23d00cb4415cc75",
            "zone_id": "ZHURV8PSTC4K8"
          },
          "dependencies": [
            "aws_security_group.performance_test",
            "aws_subnet.performance_test_public",
            "aws_vpc.performance_test",
            "data.aws_availability_zones.performance_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "performance_test_blockchain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:950711068211:listener/app/performance-test-lb/aab9c95a0aa46e00/be383ea0e2ab495e",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:950711068211:targetgroup/performance-test-blockchain-tg/cbb8f12ffe883ff0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:950711068211:listener/app/performance-test-lb/aab9c95a0aa46e00/be383ea0e2ab495e",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:950711068211:loadbalancer/app/performance-test-lb/aab9c95a0aa46e00",
            "port": 8546,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.performance_test",
            "aws_lb_target_group.performance_test_blockchain",
            "aws_security_group.performance_test",
            "aws_subnet.performance_test_public",
            "aws_vpc.performance_test",
            "data.aws_availability_zones.performance_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "performance_test_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:950711068211:listener/app/performance-test-lb/aab9c95a0aa46e00/87c50893fde6106c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-2:950711068211:targetgroup/performance-test-worker-tg/f1b007d5a39b7699",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:950711068211:listener/app/performance-test-lb/aab9c95a0aa46e00/87c50893fde6106c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-2:950711068211:loadbalancer/app/performance-test-lb/aab9c95a0aa46e00",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.performance_test",
            "aws_lb_target_group.performance_test_worker",
            "aws_security_group.performance_test",
            "aws_subnet.performance_test_public",
            "aws_vpc.performance_test",
            "data.aws_availability_zones.performance_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "performance_test_blockchain",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:950711068211:targetgroup/performance-test-blockchain-tg/cbb8f12ffe883ff0",
            "arn_suffix": "targetgroup/performance-test-blockchain-tg/cbb8f12ffe883ff0",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:950711068211:targetgroup/performance-test-blockchain-tg/cbb8f12ffe883ff0",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "performance-test-blockchain-tg",
            "port": 8546,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a23d00cb4415cc75"
          },
          "dependencies": [
            "aws_vpc.performance_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "performance_test_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-2:950711068211:targetgroup/performance-test-worker-tg/f1b007d5a39b7699",
            "arn_suffix": "targetgroup/performance-test-worker-tg/f1b007d5a39b7699",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-499",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-2:950711068211:targetgroup/performance-test-worker-tg/f1b007d5a39b7699",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "performance-test-worker-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0a23d00cb4415cc75"
          },
          "dependencies": [
            "aws_vpc.performance_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "performance_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03862f572400bd66b",
            "connectivity_type": "public",
            "id": "nat-05a138a09d6ec5be0",
            "network_interface_id": "eni-05877f20b885c49db",
            "private_ip": "10.32.2.182",
            "public_ip": "35.177.43.140",
            "subnet_id": "subnet-040238240f9a5c0e1"
          },
          "dependencies": [
            "aws_eip.performance_test_public",
            "aws_internet_gateway.performance_test",
            "aws_subnet.performance_test_public",
            "aws_vpc.performance_test",
            "data.aws_availability_zones.performance_test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06d1b6d67732395c7",
            "connectivity_type": "public",
            "id": "nat-00f83f7089ffd1178",
            "network_interface_id": "eni-080e0ad2fac4dc6aa",
            "private_ip": "10.32.3.60",
            "public_ip": "3.10.229.130",
            "subnet_id": "subnet-0b7f9fda955fec917"
          },
          "dependencies": [
            "aws_eip.performance_test_public",
            "aws_internet_gateway.performance_test",
            "aws_subnet.performance_test_public",
            "aws_vpc.performance_test",
            "data.aws_availability_zones.performance_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "internet_access",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0058797183cd26668",
            "id": "r-rtb-003ff940880b48cac1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-003ff940880b48cac",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.performance_test",
            "aws_vpc.performance_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "performance_test_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:950711068211:route-table/rtb-0e1b189e2a909012d",
            "id": "rtb-0e1b189e2a909012d",
            "owner_id": "950711068211",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05a138a09d6ec5be0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a23d00cb4415cc75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.performance_test_public",
            "aws_internet_gateway.performance_test",
            "aws_nat_gateway.performance_test",
            "aws_subnet.performance_test_public",
            "aws_vpc.performance_test",
            "data.aws_availability_zones.performance_test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:950711068211:route-table/rtb-072f5b192a032e0b3",
            "id": "rtb-072f5b192a032e0b3",
            "owner_id": "950711068211",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00f83f7089ffd1178",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a23d00cb4415cc75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.performance_test_public",
            "aws_internet_gateway.performance_test",
            "aws_nat_gateway.performance_test",
            "aws_subnet.performance_test_public",
            "aws_vpc.performance_test",
            "data.aws_availability_zones.performance_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "performance_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e162b253eb264a3",
            "route_table_id": "rtb-0e1b189e2a909012d",
            "subnet_id": "subnet-0f0ad3c0e5396a199"
          },
          "dependencies": [
            "aws_eip.performance_test_public",
            "aws_internet_gateway.performance_test",
            "aws_nat_gateway.performance_test",
            "aws_route_table.performance_test_private",
            "aws_subnet.performance_test_private",
            "aws_subnet.performance_test_public",
            "aws_vpc.performance_test",
            "data.aws_availability_zones.performance_test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075e8ae9cd9134808",
            "route_table_id": "rtb-072f5b192a032e0b3",
            "subnet_id": "subnet-0f5426fafa13bf251"
          },
          "dependencies": [
            "aws_eip.performance_test_public",
            "aws_internet_gateway.performance_test",
            "aws_nat_gateway.performance_test",
            "aws_route_table.performance_test_private",
            "aws_subnet.performance_test_private",
            "aws_subnet.performance_test_public",
            "aws_vpc.performance_test",
            "data.aws_availability_zones.performance_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "performance_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:950711068211:security-group/sg-0d3a4a0eeef42fe47",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3a4a0eeef42fe47",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "performance-test-security-group",
            "name_prefix": "",
            "owner_id": "950711068211",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a23d00cb4415cc75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.performance_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "performance_test_docdb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:950711068211:security-group/sg-0cce6735a1372ec11",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allows access to anywhere",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cce6735a1372ec11",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.32.0.0/16"
                ],
                "description": "Allows access from the VPC subnets",
                "from_port": 27017,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 27017
              }
            ],
            "name": "performance-test-docdb-sg",
            "name_prefix": "",
            "owner_id": "950711068211",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "performance_test_docdb_sg"
            },
            "tags_all": {
              "Name": "performance_test_docdb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a23d00cb4415cc75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.performance_test"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "performance_test_nightfall-blockchain-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:950711068211:security-group/sg-01a9cfb27c573964e",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01a9cfb27c573964e",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.32.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8546
              },
              {
                "cidr_blocks": [
                  "10.32.0.0/16"
                ],
                "description": "",
                "from_port": 8546,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8546
              }
            ],
            "name": "performance_test-blockchain-sg",
            "name_prefix": "",
            "owner_id": "950711068211",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a23d00cb4415cc75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.performance_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "performance_test_nightfall-worker-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:950711068211:security-group/sg-09c40510516740d32",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09c40510516740d32",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.32.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "performance_test-worker-sg",
            "name_prefix": "",
            "owner_id": "950711068211",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0a23d00cb4415cc75"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.performance_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "performance_test_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:950711068211:subnet/subnet-0f0ad3c0e5396a199",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.32.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0ad3c0e5396a199",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950711068211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a23d00cb4415cc75"
          },
          "dependencies": [
            "aws_vpc.performance_test",
            "data.aws_availability_zones.performance_test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:950711068211:subnet/subnet-0f5426fafa13bf251",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.32.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5426fafa13bf251",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "950711068211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a23d00cb4415cc75"
          },
          "dependencies": [
            "aws_vpc.performance_test",
            "data.aws_availability_zones.performance_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "performance_test_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:950711068211:subnet/subnet-040238240f9a5c0e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.32.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-040238240f9a5c0e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950711068211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a23d00cb4415cc75"
          },
          "dependencies": [
            "aws_vpc.performance_test",
            "data.aws_availability_zones.performance_test"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:950711068211:subnet/subnet-0b7f9fda955fec917",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.32.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b7f9fda955fec917",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "950711068211",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0a23d00cb4415cc75"
          },
          "dependencies": [
            "aws_vpc.performance_test",
            "data.aws_availability_zones.performance_test"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "performance_test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:950711068211:vpc/vpc-0a23d00cb4415cc75",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.32.0.0/16",
            "default_network_acl_id": "acl-04dfe44fa325e2f39",
            "default_route_table_id": "rtb-003ff940880b48cac",
            "default_security_group_id": "sg-055ffc3a943c7304d",
            "dhcp_options_id": "dopt-0e09e6cf0cf40d7a0",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a23d00cb4415cc75",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-003ff940880b48cac",
            "owner_id": "950711068211"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}